--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.0.0",
-    "ag-grid-react": "^29.0.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
+    "chartjs-adapter-moment": "^1.0.1",
     "dotenv": "^16.0.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-confirm-alert": "^3.0.6",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
