--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
