--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
