--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-dragdata": "^2.2.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
-    "jspreadsheet-ce": "^4.11.5",
     "js-cookie": "^3.0.5",
+    "jspreadsheet-ce": "^4.11.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
