--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "jspreadsheet-ce": "^4.11.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
