--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,2 @@
 REACT_APP_BASE_URL="/AQMSLogger"
-REACT_APP_WSurl="https://atlas.smartgeoapps.com/AQMSLoggerWebApi/"
+REACT_APP_WSurl="http://localhost/AQMSLoggerWebApi/"
