--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-plugin-dragdata": "^2.2.5",
     "dotenv": "^16.3.1",
+    "echarts": "^5.4.3",
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.4.1",
